fix logo spacing

--- a/src/styles/customFooter.css
+++ b/src/styles/customFooter.css
@@ -1,3 +1,7 @@
 .pre-footer h2 {
 	margin-top: 0 !important;
 }
+
+.pre-footer .footer-logo {
+	margin-right: 1em;
+}
